infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-api-gateway
  namespace: default
  labels:
    app: portfolio-api-gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio-api-gateway
  template:
    metadata:
      labels:
        app: portfolio-api-gateway
    spec:
      containers:
      - name: api-gateway
        image: us-central1-docker.pkg.dev/react-app-492207/portfolio-repo/portfolio-api-gateway:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
