infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-api-gateway-service
  namespace: default
  labels:
    app: portfolio-api-gateway
spec:
  type: LoadBalancer
  selector:
    app: portfolio-api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
